# cdec

./: .gitignore  configure.ac  mem
cdemo/exp/: 110909log  LGImplementationLog  expEclipseConf
cdemo/quick/: conf.ini  dummy.3gram.lm  grammar  in.txt  runQuickVal  weights
decoder/: Makefile.am  aligner.cc  aligner.h  apply_models.cc  apply_models.h  bottom_up_parser.cc  cdec.cc  cdec_ff.cc  decoder.cc  decoder.h  dict_test.cc  earley_composer.cc  ff.cc  ff.h  ff_klm.cc  ff_klm.h  ff_lm.cc  fst_translator.cc  grammar.cc  hg.cc  hg.h  hg_intersect.cc  hg_intersect.h  hg_io.cc  hg_test.cc  inside_outside.h  lexalign.cc  lextrans.cc  logval.h  logval_test.cc  mbr_semiring.h  rule_lexer.l  scfg_translator.cc  sparse_vector.h  translator.cc  trule.cc  trule.h  undirected_candidate.cc  undirected_candidate.h
environment/: LocalConfig.pm
extools/: Makefile.am  README  build_lexical_translation.cpp  build_trie.cpp  extract.cc  extract.h  extractor.cc  filter_grammar.cc  mr_stripe_rule_reduce.cc  score_grammar.cc  score_grammar.cpp  sentence_pair.cc  sentence_pair.h  simple-extract.sh  suffix_trie.h
klm/lm/: model.cc  model.hh
tests/system_tests/australia-align/: weights
tests/system_tests/mcle_gradient/: cdec.ini
utils/: sparse_vector.h
vest/: Makefile.am  aer_scorer.cc  aer_scorer.h  dist-vest.pl  mbr_kbest.cc  mr_vest_map.cc  scorer.cc  scorer.h  viterbi_envelope.cc  viterbi_envelope.h
